--- a/sass/_content.scss
+++ b/sass/_content.scss
@@ -6,6 +6,7 @@
     background-color: var(--color-grey-light-1);
     @media(max-width: $bp-sm) {
       grid-template-columns: 1 / -1;
+      margin: 0;
     }
    
     &-sidebar {
@@ -22,6 +23,7 @@
             grid-row: 1 / 2;
             grid-template-rows: 6rem;
            }
+        
         .navigation {
          
             grid-column: 1 / -1;
@@ -36,6 +38,12 @@
                     margin: 2rem;
                     padding: 2rem 4rem;
                     font-size: 2rem;
+                    @media(max-width: $bp-xs) {
+                       margin: .7rem;
+                       padding: 1rem 2rem;
+                       font-size: 1.4rem;
+                       justify-content: space-evenly;
+                    }
                 }
              }
             &-item {
