--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -5,7 +5,10 @@
     background-color: var(--color-grey-light-1);
     margin: 8rem auto;
     @media only screen and (max-width: $bp-sm) {
-        margin: 0;
         width: 100%;
+        margin: 0;
+    }
+    @media only screen and (max-width: $bp-xs) {
+        margin: 0;
     }
 }
