--- a/css/style.css
+++ b/css/style.css
@@ -287,7 +287,7 @@ body {
     height: 100%;
     display: flex;
     align-items: stretch;
-    font-size: 1rem; }
+    font-size: 1.4rem; }
     .hotel-section-location-div {
       display: flex;
       justify-content: center;
@@ -305,18 +305,14 @@ body {
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      width: 7rem;
+      width: 10rem;
       height: 100%;
-      margin: 0;
-      padding: 0;
-      margin: 0;
       margin-left: 2rem;
       color: #fff;
-      font-size: 2rem;
       flex: 1;
       background-color: var(--color-primary-light); }
       .hotel-section-location-rating:last-child {
-        font-size: .7rem; }
+        font-size: 1.2rem; }
 
 .detail {
   grid-column: 1 / -1;
@@ -385,9 +381,10 @@ body {
     @media (max-width: 37.5em) {
       .detail .reviews {
         grid-column: 1 / 3;
-        grid-template-columns: repeat(auto-fit, minmax(50rem, 1fr)); } }
+        grid-template-columns: repeat(auto-fit, minmax(50rem, 1fr));
+        font-size: 1.6rem; } }
     .detail .reviews--1, .detail .reviews--2 {
-      padding: 1rem 1.2rem;
+      padding: 1rem 1.8rem;
       background-color: #fff;
       box-shadow: var(--shadow-light); }
       .detail .reviews--1 figcaption, .detail .reviews--2 figcaption {
@@ -417,8 +414,8 @@ body {
               text-transform: uppercase; }
           .detail .reviews--1 figcaption .user_rating, .detail .reviews--2 figcaption .user_rating {
             color: var(--color-primary);
-            font-size: 1.4rem;
-            font-weight: 400; }
+            font-size: 1.8rem;
+            font-weight: 700; }
     .detail .reviews--1 {
       grid-row: 1 / span 1;
       align-self: stretch; }
