--- a/css/style.css
+++ b/css/style.css
@@ -105,11 +105,6 @@ body {
     margin-left: 2rem;
     justify-self: start;
     align-self: center; }
-  .header .search-icon {
-    height: 2rem;
-    width: 2rem;
-    fill: var(--color-grey-dark-3);
-    background-color: transparent; }
   .header-search {
     grid-row: 1 / 2;
     grid-column: 2 / span 2; }
@@ -128,9 +123,15 @@ body {
       transition: all .2s;
       margin-right: -3.25rem; }
       .header-search-input:focus {
-        width: 100%;
+        width: 95%;
         outline: none;
         background-color: var(--color-grey-light-3); }
+    .header-search-button {
+      border: 0; }
+      .header-search-button .search-icon {
+        height: 2rem;
+        width: 2rem;
+        fill: var(--color-grey-dark-3); }
   .header .user-group {
     grid-row: 1 / 2;
     grid-column: 11;
