updated media query

--- a/sass/_content.scss
+++ b/sass/_content.scss
@@ -59,7 +59,7 @@
                 &:hover {
                     background-position: 100%;
                     color: var(--color-primary-light);
-                    transform: translateX(.1rem)
+                    transform: translateX(.1rem);
                 }
                 svg {
                     width: 2rem;
