--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -3,8 +3,14 @@
     grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
     padding: 1rem;
     align-content: center;
-    @media(max-width: $bp-xs) {
-        grid-template-columns: 1fr;
+    justify-content: center;
+    @media(max-width: $bp-sm) {
+       // grid-template-columns: 1fr;
+        grid-template-columns:repeat(auto-fit, minmax(6rem, 1fr));
+        grid-template-rows: repeat(2, 1fr);
+        justify-content: space-between;
+        grid-row-gap: 1rem;
+        padding: 1rem 0;
     }
     &-logo {
         height: 3.25rem;
@@ -13,12 +19,20 @@
         margin-left: 2rem;
         justify-self: start;
         align-self: center;
+        @media(max-width: $bp-sm) {
+           align-self: stretch;
+           height: 4rem;
+         }
     
     }
  
     &-search {
         grid-row: 1 / 2;
         grid-column: 2 / span 2;
+        @media(max-width: $bp-sm) {
+          grid-row: 2 / 3;
+          grid-column: 1 / -1;
+        }
         &-input {
             font-family: inherit;
             font-size: 1.5rem;
@@ -58,6 +72,10 @@
      align-self: stretch;
      display: grid;
      grid-template-columns: repeat(2, 4rem) 1fr;
+     @media(max-width: $bp-sm) {
+         grid-column: 3 / -1;
+         padding: 0 .9rem;
+     }
      &-box {
         display: flex;
         align-items: center;
