--- a/css/style.css
+++ b/css/style.css
@@ -94,10 +94,15 @@ body {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
   padding: 1rem;
-  align-content: center; }
-  @media (max-width: 25em) {
+  align-content: center;
+  justify-content: center; }
+  @media (max-width: 37.5em) {
     .header {
-      grid-template-columns: 1fr; } }
+      grid-template-columns: repeat(auto-fit, minmax(6rem, 1fr));
+      grid-template-rows: repeat(2, 1fr);
+      justify-content: space-between;
+      grid-row-gap: 1rem;
+      padding: 1rem 0; } }
   .header-logo {
     height: 3.25rem;
     grid-row: 1 / 2;
@@ -105,9 +110,17 @@ body {
     margin-left: 2rem;
     justify-self: start;
     align-self: center; }
+    @media (max-width: 37.5em) {
+      .header-logo {
+        align-self: stretch;
+        height: 4rem; } }
   .header-search {
     grid-row: 1 / 2;
     grid-column: 2 / span 2; }
+    @media (max-width: 37.5em) {
+      .header-search {
+        grid-row: 2 / 3;
+        grid-column: 1 / -1; } }
     .header-search-input {
       font-family: inherit;
       font-size: 1.5rem;
@@ -139,6 +152,10 @@ body {
     align-self: stretch;
     display: grid;
     grid-template-columns: repeat(2, 4rem) 1fr; }
+    @media (max-width: 37.5em) {
+      .header .user-group {
+        grid-column: 3 / -1;
+        padding: 0 .9rem; } }
     .header .user-group-box {
       display: flex;
       align-items: center;
@@ -272,8 +289,7 @@ body {
   .hotel-section-info {
     display: flex;
     justify-self: start;
-    align-items: center;
-    justify-content: space-between; }
+    align-items: center; }
     .hotel-section-info h1 {
       font-size: 2.25rem;
       font-weight: 300;
