--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -28,18 +28,22 @@
  
     &-search {
         grid-row: 1 / 2;
-        grid-column: 2 / span 2;
+        grid-column: 2 / 5;
+        align-self: center;
         @media(max-width: $bp-sm) {
           grid-row: 2 / 3;
-          grid-column: 1 / -1;
+          grid-column: 2 / -1;
+          text-align: center;
         }
         &-input {
+            display: inline-block;
             font-family: inherit;
             font-size: 1.5rem;
             color: inherit;
+            position: relative;
             background-color: var(--color-grey-light-2);
             border: none;
-            padding: .7rem 2rem;
+            padding: .6rem 2rem;
             border-radius: 100px;
             padding: 1rem 2rem;
             align-self: stretch;
@@ -47,19 +51,34 @@
             height: 100%;
             transition: all .2s;
             margin-right: -3.25rem;
+           
             &:focus {
                 width: 95%;
                 outline: none;
                 background-color: var(--color-grey-light-3);
+                border-bottom: 1px solid var(--color-primary-dark);
+            }
+            @media(max-width: $bp-sm) { 
+              margin: 0 1rem;
+              padding: .5rem 1rem;
+              margin: 0 auto;
+                border-radius: none;
+              
             }
         }
         &-button {
             border: 0;
-            .search-icon {
+            position: absolute;
+            top: 10rem;
+            z-index: 200;
+            @media(max-width: $bp-sm) {
+                top: 7rem;
+                right: 5rem;
+            }
+         .search-icon {
                 height: 2rem;
                 width: 2rem;
                 fill: var(--color-grey-dark-3);
-               
             }
         }
 
